--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <option value="power">累乗の計算</option>
         <option value="GCD">ユークリッドの互除法</option>
         <option value="fibonacci">フィボナッチ数列の計算</option>
-        <option value="hanoi">ハノイの党</option>
+        <option value="hanoi">ハノイの塔</option>
     </select><br>
 
     <h1 id="head"></h1>
@@ -25,9 +25,9 @@
     <h3 id="explain"></h3>
 
     <div id="inputContainer">
-        第一引数=<input id="input1"><br>
-        第二引数=<input id="input2"><br>
-        第三引数=<input id="input3">
+        <div id="inputText1">第一引数=<input id="input1"></div>
+        <div id="inputText2">第二引数=<input id="input2"></div>
+        <div id="inputText3">第三引数=<input id="input3"></div>
     </div>
 
     <button id="button">結果の表示</button>
